--- a/Pages/product_page.css
+++ b/Pages/product_page.css
@@ -3,6 +3,22 @@
     font-family: 'Baloo Bhaina 2', cursive;
     font-family: 'Roboto', sans-serif;
 }
+
+h1{
+    margin-left: 20px;
+}
+.price{
+    margin-left: 20px;
+}
+.rating{
+    margin-left: 20px;
+}
+.description{
+    margin-left: 20px;
+}
+.buy-now{
+    margin-left: 20px;
+}
 .product-image {
     display: block;
     margin-left: auto;
@@ -44,7 +60,7 @@ button:hover{
 }
 .comment-input{
     width: 80%;
-    height: 30px;
+    height: 22px;
     border-radius: 5px;
     border: 1px solid #ccc;
     padding: 5px;
